fix: make nav menu work on mobile

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -300,13 +300,13 @@ input:checked+.slider::before {
 	background: none;
 	display: flex;
 	flex-direction: column;
-	gap: 0.75rem;
+	gap: 0.75em;
 	padding: 0;
 }
 
 #hamburger span {
-	width: 2.5rem;
-	height: 0.25rem;
+	width: 2.5em;
+	height: 0.25em;
 	background-color: var(--fg);
 }
 
@@ -332,7 +332,7 @@ input:checked+.slider::before {
 #nav-menu nav {
 	display: flex;
 	flex-direction: column;
-	font-size: 1.2rem;
+	font-size: 1.2em;
 	margin-top: 6rem;
 	gap: 1em;
 }
@@ -377,7 +377,7 @@ input:checked+.slider::before {
 }
 
 #high-contrast-container .switch {
-	font-size: 0.9rem;
+	font-size: 0.9em;
 }
 
 .theme-select {
@@ -669,6 +669,18 @@ main {
 
 	#user-details .analytics-content {
 		font-size: 1.25rem;
+	}
+
+	#nav-menu {
+		font-size: 2rem;
+	}
+
+	#nav-menu nav {
+		margin-top: 10rem;
+	}
+
+	#hamburger {
+		font-size: 2rem;
 	}
 }
 
